// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Look 1`] = `
<div
  className="Layer-{{ hash }}"
>
  Layer
</div>
`;

exports[`Look 2`] = `
<div
  className="PrimaryLayer-{{ hash }} Layer-{{ hash }}"
>
  PrimaryLayer
</div>
`;

exports[`Look 3`] = `
<div
  className="PrimaryLayer-{{ hash }} Layer-{{ hash }} Mixin-anonWhen-{{ hash }}-1"
>
  PrimaryLayer
</div>
`;

exports[`Look shortcuts 1`] = `
<button
  className="Button-{{ hash }}"
>
  Button
</button>
`;

exports[`Look shortcuts 2`] = `
<button
  className="PrimaryButton-{{ hash }} Button-{{ hash }}"
>
  PrimaryButton
</button>
`;
